--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     ]
   },
   "dependencies": {
+    "react-google-login": "^5.1.21",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "socket.io-client": "^2.3.1"
   }
 }
