--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "is-image-url": "^1.1.8",
     "react-google-login": "^5.1.21",
     "react-linkify": "^1.0.0-alpha",
     "react-router": "^5.2.0",
